# tugas-besar-1-oop-1

./: .gitignore  CMakeLists.txt
config/: utility.txt
config/board_20/: aksi.txt  property.txt
config/board_24/: aksi.txt  property.txt
config/board_28/: aksi.txt  property.txt
config/board_32/: aksi.txt  property.txt
config/board_36/: aksi.txt  property.txt
config/board_40/: aksi.txt  property.txt
config/board_44/: aksi.txt  property.txt
config/board_48/: aksi.txt  property.txt
config/board_52/: aksi.txt  property.txt
config/board_56/: aksi.txt  property.txt
config/board_60/: aksi.txt  property.txt
include/core/: ActionCard.hpp  COMPlayer.hpp  COMStrategy.hpp  CardDeck.hpp  ChanceCard.hpp  ColorGroup.hpp  CommunityChestCard.hpp  DemolitionCard.hpp  DiscountCard.hpp  GameContext.hpp  GameException.hpp  GreedyCOMStrategy.hpp  HumanPlayer.hpp  LassoCard.hpp  MoveCard.hpp  Player.hpp  Property.hpp  ShieldCard.hpp  SimpleCOMStrategy.hpp  SkillCard.hpp  TeleportCard.hpp  Tiles.hpp
include/core/card/: Card.hpp  CardDeck.hpp  ChanceCard.hpp  CommunityChestCard.hpp  DemolitionCard.hpp  DiscountCard.hpp  LassoCard.hpp  MoveCard.hpp  ShieldCard.hpp  SkillCard.hpp  TeleportCard.hpp
include/core/player/: COMPlayer.hpp  COMStrategy.hpp  GreedyCOMStrategy.hpp  HumanPlayer.hpp  Player.hpp  PlayerTurnContext.hpp  SimpleCOMStrategy.hpp
include/data/: ConfigReader.hpp  ConfigStructs.hpp  DomainBuilder.hpp  GameStateDTO.hpp  LogEntry.hpp  LogSerializer.hpp  PropertyConfig.hpp  SaveLoadManager.hpp  TransactionLogger.hpp
include/logic/: Auction.hpp  Bank.hpp  BankruptcyHandler.hpp  Board.hpp  Game.hpp  GameLoader.hpp  InputMediator.hpp  TransactionLogger.hpp  UIInputMediator.hpp
include/ui/: ActionPanel.hpp  ActionTilePanel.hpp  AssetsManager.hpp  BoardPanel.hpp  Color.hpp  Constants.hpp  CornerTilePanel.hpp  DialogManager.hpp  GameWindow.hpp  PlayerInfoPanel.hpp  StreetTilePanel.hpp  Style.hpp  TilePanel.hpp  Widgets.hpp
include/ui/board/: ActionTilePanel.hpp  BoardPanel.hpp  CornerTilePanel.hpp  StreetTilePanel.hpp  TileGeometry.hpp  TilePanel.hpp
include/ui/component/: Color.hpp  Constants.hpp  PropertyView.hpp  Widgets.hpp
include/ui/dialog/: DialogManager.hpp  DialogManagerInternal.hpp
include/ui/sidebar/: ActionPanel.hpp  Game_temp.hpp  PlayerCard.hpp  PlayerInfoPanel.hpp
src/: main.cpp
src/core/: ActionCard.cpp  COMPlayer.cpp  COMStrategy.cpp  ChanceCard.cpp  CommunityChestCard.cpp  DemolitionCard.cpp  DiscountCard.cpp  GreedyCOMStrategy.cpp  HumanPlayer.cpp  LassoCard.cpp  MoveCard.cpp  Player.cpp  Property.cpp  Railroad.cpp  ShieldCard.cpp  SimpleCOMStrategy.cpp  SkillCard.cpp  Street.cpp  TeleportCard.cpp  Tiles.cpp  Utility.cpp
src/core/card/: Card.cpp  ChanceCard.cpp  CommunityChestCard.cpp  DemolitionCard.cpp  DiscountCard.cpp  LassoCard.cpp  MoveCard.cpp  ShieldCard.cpp  TeleportCard.cpp
src/core/player/: COMPlayer.cpp  COMStrategy.cpp  GreedyCOMStrategy.cpp  HumanPlayer.cpp  Player.cpp  SimpleCOMStrategy.cpp
src/data/: ConfigReader.cpp  ConfigStructs.cpp  DomainBuilder.cpp  LogSerializer.cpp  PropertyConfig.cpp  SaveLoadManager.cpp  TransactionLogger.cpp
src/logic/: Auction.cpp  Bank.cpp  BankruptcyHandler.cpp  Board.cpp  Game.cpp  GameLoader.cpp  TransactionLogger.cpp
src/ui/: ActionPanel.cpp  ActionTilePanel.cpp  BoardPanel.cpp  Button.cpp  Constants.cpp  CornerTilePanel.cpp  GameWindow.cpp  ImagePanel.cpp  Label.cpp  Panel.cpp  PlayerInfoPanel.cpp  StreetTilePanel.cpp  Style.cpp  TileGeometry.cpp  Widgets.cpp
src/ui/board/: ActionTilePanel.cpp  BoardPanel.cpp  CornerTilePanel.cpp  StreetTilePanel.cpp  TileGeometry.cpp  TilePanel.cpp
src/ui/component/: Button.cpp  ImagePanel.cpp  Label.cpp  Panel.cpp  Style.cpp
src/ui/dialog/: DialogManager.cpp  DialogManagerAction.cpp  DialogManagerInfo.cpp  DialogManagerMediator.cpp
src/ui/sidebar/: ActionPanel.cpp  Game_temp.cpp  PlayerCard.cpp  PlayerInfoPanel.cpp
